[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-adn"
version = "0.2.0"
description = "RL-ADN: a modern Python toolkit for ESS dispatch research in active distribution networks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Hou Shengren" },
  { name = "Gao Shuyi" },
  { name = "Pedro P. Vergara" },
]
keywords = ["reinforcement-learning", "power-systems", "distribution-network", "energy-storage"]
dependencies = [
  "gymnasium>=1.2,<2",
  "matplotlib>=3.8,<4",
  "networkx>=3.2,<4",
  "numba>=0.60,<0.65",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "psutil>=6,<7",
  "scipy>=1.11,<2",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
algorithms = [
  "torch>=2.2,<3",
]
augmentation = [
  "copulas>=0.12,<1",
  "scikit-learn>=1.4,<2",
  "seaborn>=0.13,<1",
  "SciencePlots>=2.1,<3",
]
benchmarks = [
  "pyomo>=6.8,<7",
]
pandapower = [
  "pandapower>=2.14,<4",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
  "sphinx>=8,<9",
  "sphinx-rtd-theme>=3,<4",
]

[project.urls]
Homepage = "https://github.com/EnergyQuantResearch/RL-ADN"
Documentation = "https://github.com/EnergyQuantResearch/RL-ADN/wiki"
Repository = "https://github.com/EnergyQuantResearch/RL-ADN"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rl_adn*"]

[tool.setuptools.package-data]
rl_adn = [
  "data_sources/network_data/node_123/*.csv",
  "data_sources/network_data/node_25/*.csv",
  "data_sources/network_data/node_34/*.csv",
  "data_sources/network_data/node_69/*.csv",
  "data_sources/time_series_data/*.csv",
  "dashboard/static/*",
]

[tool.pytest.ini_options]
markers = [
  "powerflow: tests that require optional pandapower support",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 240
target-version = "py311"
extend-exclude = [
  "build",
  "dist",
  "docs",
  "examples/*.ipynb",
  "rl_adn/benchmarks",
  "rl_adn.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/*_node_network_powerflow_test.py" = ["E402"]
"rl_adn/algorithms/utility.py" = ["F822"]
